--- a/DLL-Codecave-Wesnoth-1.14.9/DLL-Codecave-Wesnoth-1.14.9.vcxproj
+++ b/DLL-Codecave-Wesnoth-1.14.9/DLL-Codecave-Wesnoth-1.14.9.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{2a2f874f-47e1-4300-8cdd-0cd92752e05d}</ProjectGuid>
     <RootNamespace>DLLCodecaveWesnoth1149</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>DLL-Codecave-Gold-Display-Wesnoth-1.14.9</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
